python/testData/quickFixes/PyTypeHintsQuickFixTest/parenthesesAndTypingTarget.py
from typing import Union

v1 = <error descr="Generics should be specified through square brackets">Union<caret>(int)</error>